# seq-lib

./: Cargo.toml  phase_calib.m
params/: 1_localizer.toml  26wang06_pfgcs.toml  dti.toml  dti_b0_test.toml  dti_test.toml  gre_20um.toml  rfcal.toml
src/: bloch.rs  dwi3d.rs  grad_pulses.rs  lib.rs  main.rs  q_calc.rs  rf_cal.rs  rf_pulses.rs  ring_down.rs  se3d.rs  ssme.rs
